--- a/manifest.json
+++ b/manifest.json
@@ -1,68 +1,100 @@
 {
-    "name": "PROC",
+    "id": "PROC",
     "title": "Process Model",
     "description": "openEHR Process Model Component",
     "keywords": "process model, workflow, pathways, openehr",
-    "group": "Content",
-    "jira": {
-        "open_issues": "11106",
-		"releases": [
-			{
-				"id": "1.0.0",
-				"jira_refs":  {
-					"crs": "SPECPROC/versions/12500",
-					"prs": "SPECPR/versions/12501"
-				}
-			},
-			{
-				"id": "1.5.0", 
-				"jira_refs": {
-					"crs": "SPECPROC/versions/12505",
-					"prs": "SPECPR/versions/12536"
-				}
-			}
-		]
-    },
     "specifications": [
         {
-            "name": "task_planning",
+            "id": "task_planning",
             "title": "Task Planning (TP) Specification",
             "title_short": "Task Planning (TP)",
             "description": "openEHR Task Planning specification",
-            "summary": "An adaptive, executable, team-based model of workflow.",
+            "summary": "An adaptive, executable, team-based model of clinical workflow - Work Plan, Task Plan, Event",
 			"copyright_year": "2017",
 			"spec_status": "TRIAL",
 			"keywords": "workflow, task, planning, EHR, EMR, reference model, openehr"
         },
         {
-            "name": "tp_vml",
+            "id": "tp_vml",
             "title": "Task Planning Visual Modelling Language (TP-VML)",
             "title_short": "TP Visual Modelling Language (TP_VML)",
             "description": "openEHR Task Planning Visual Modelling Language",
-            "summary": "A visual modelling language for openEHR Task Planning.",
+            "summary": "A visual modelling language for clinical plans and workflows.",
 			"copyright_year": "2017",
 			"spec_status": "TRIAL",
 			"keywords": "task planning, visual language, workflow"
         },
         {
-            "name": "tp_examples",
+            "id": "tp_examples",
             "title": "Task Planning Examples",
             "title_short": "TP Examples",
             "description": "openEHR Task Planning Examples",
-            "summary": "Real world examples of openEHR Task Planning.",
+            "summary": "Real world detailed examples using Task Planning.",
 			"copyright_year": "2017",
 			"spec_status": "TRIAL",
 			"keywords": "task planning, examples, workflow"
+        },
+        {
+            "id": "decision_language",
+            "title": "Decision Language (DL) and Model",
+            "title_short": "Decision Language (DL)",
+            "description": "openEHR Decision Language specification",
+            "summary": "Language for use with GDL, TP.",
+            "copyright_year": "2020",
+            "spec_status": "DEVELOPMENT",
+            "keywords": "expressions, rules, workflow"
         }
-
     ],
-    "expressions": {
-	    "uml": {
-		    "primary": "openEHR_UML-PROC.mdzip",
-		    "dependencies": [
-				"openEHR_UML-Base.mdzip",
-				"openEHR_UML-RM.mdzip"
-		    ]
-		}
-	}
+    "expressions": [
+	    {
+		    "id": "openEHR_UML-PROC.mdzip",
+            "type": "uml",
+		    "title": "PROC UML",
+            "description": "UML file for MagicDraw 19 for PROC model. Contains UML 2.5 standard XMI file."
+		},
+        {
+            "id": "openEHR_UML-RM.mdzip",
+            "dependency": {
+                "component": "RM",
+                "release": "latest"
+            }
+        },
+        {
+            "id": "openEHR_UML-Base.mdzip",
+            "dependency": {
+                "component": "BASE",
+                "release": "latest"
+            }
+        }
+    ],
+    "jira": {
+        "open_issues": "11106",
+        "roadmap": "SPECPROC"
+    },
+    "releases": [
+        {
+            "id": "2.0.0",
+            "date": "",
+            "jira": {
+                "crs": "SPECPROC/versions/12506",
+                "prs": "SPECPR/versions/12527"
+            }
+        },
+        {
+            "id": "1.5.0",
+            "date": "2020-05-05",
+            "jira": {
+                "crs": "SPECPROC/versions/12505",
+                "prs": "SPECPR/versions/12536"
+            }
+        },
+        {
+            "id": "1.0.0",
+            "date": "2017-12-01",
+            "jira":  {
+                "crs": "SPECPROC/versions/12500",
+                "prs": "SPECPR/versions/12501"
+            }
+        }
+    ]
 }
