--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,17 @@
     "keywords": "process model, workflow, pathways, openehr",
     "specifications": [
         {
+            "id": "overview",
+            "title": "Process & Planning Overview",
+            "title_short": "Overview",
+            "description": "openEHR Process and Planning Overview",
+            "summary": "Overview of openEHR Process, Planing and Guidelines specifications.",
+            "micro_summary": "Overview of openEHR Process, Planing and Guidelines specifications.",
+			"copyright_year": "2020",
+			"spec_status": "DEVELOPMENT",
+			"keywords": "process, guidelines, GDL, planning, workflow"
+        },
+        {
             "id": "task_planning",
             "title": "Task Planning (TP) Specification",
             "title_short": "Task Planning (TP)",
@@ -43,15 +54,26 @@
 			"keywords": "task planning, examples, workflow"
         },
         {
-            "id": "decision_language",
-            "title": "Decision Language (DL) and Model",
-            "title_short": "Decision Language (DL)",
-            "description": "openEHR Decision Language specification",
-            "summary": "Language for use with Guideline definition Language (GDL), Task Planning (TP).",
-            "micro_summary": "Language for use with GDL, TP.",
+            "id": "DLM",
+            "title": "Decision Logic Module (DLM) specification",
+            "title_short": "Decision Logic Module (DLM)",
+            "description": "openEHR Decision Logic Module specification",
+            "summary": "Language for expressing rules and guidelines, for use with GDL3, Task Planning (TP).",
+            "micro_summary": "Rule language for use with GDL, TP.",
             "copyright_year": "2020",
             "spec_status": "DEVELOPMENT",
-            "keywords": "expressions, rules, workflow"
+            "keywords": "expressions, rules, guidelines"
+        },
+        {
+            "id": "subject_proxy",
+            "title": "Subject Proxy Service specification",
+            "title_short": "Subject Proxy Service (SP)",
+            "description": "openEHR Subject Proxy Service specification",
+            "summary": "Service for populating data-sets for Guideline definition Language (GDL), Task Planning (TP).",
+            "micro_summary": "Service for high-level data-set access",
+            "copyright_year": "2020",
+            "spec_status": "DEVELOPMENT",
+            "keywords": "data access, guidelines, workflow"
         }
     ],
     "expressions": [
