Fix a couple of typos.

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
             "title": "Process & Planning Overview",
             "title_short": "Overview",
             "description": "openEHR Process and Planning Overview",
-            "summary": "Overview of openEHR Process, Planing and Guidelines specifications.",
+            "summary": "Overview of openEHR Process, Planning and Guidelines specs.",
             "micro_summary": "Overview of openEHR Process, Planing and Guidelines specifications.",
 			"copyright_year": "2020",
 			"spec_status": "DEVELOPMENT",
