--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
             "summary": "Overview of openEHR CDS, Guidelines and Planning specifications.",
             "micro_summary": "Overview of CDS, Guidelines, and Planning specifications.",
 			"copyright_year": "2020",
-			"spec_status": "DEVELOPMENT",
+			"spec_status": "TRIAL",
 			"keywords": "process, guidelines, GDL, planning, CDS, workflow, CPG"
         },
         {
